--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -3,8 +3,8 @@
 ion-checkbox {
   --border-radius: var(--px2);
   --border-width: var(--px1);
-  // --background: transparent;
-  --background: var(--colorffffff);
+  --background: transparent;
+  // --background: var(--colorffffff);
   --border-color: var(--colorffffff);
   --checkmark-color: var(--ion-color-primary);
   --background-checked: var(--colorffffff);
