--- a/src/app/pages/ecg-cases/ecg-cases.page.scss
+++ b/src/app/pages/ecg-cases/ecg-cases.page.scss
@@ -16,6 +16,65 @@
     width: calc(60% - var(--px10));
   }
 }
+
+
+.checkbox-container {
+  position: relative;
+  padding: var(--px20) 0 var(--px20);
+}
+
+.not-publish-cls {
+  height: 20px;
+  width: 0px;
+  margin-left: 20px;
+}
+
+.checkbox-cls {
+  --border-radius: 0%;
+  margin-left: 20px;
+  margin: 0 10px 0 20px;
+  width: var(--px20);
+  height: var(--px20);
+  max-width: var(--px20);
+  --border-radius: var(--px2);
+  --border-width: var(--px2);
+  --checkmark-color: var(--colorffffff);
+  --background-checked: var(--ion-color-primary);
+  --border-color-checked: var(--ion-color-primary);
+  --checkmark-width: var(--px4);
+}
+
+.checkbox-label {
+  position: absolute;
+  font-style: normal;
+  letter-spacing: normal;
+  line-height: var(--px18);
+  text-align: left;
+  color: var(--color777777);
+  font-family: "Roboto";
+  font-size: var(--px12);
+  font-weight: 500;
+  margin-top: 2px;
+}
+
+.single-select-cls {
+  width: 96%;
+  height: 30px;
+  border-color: #e1e1e1;
+  font-size: 12px;
+}
+.logout-label-cls {
+  float: right;
+  padding-top: 3px;
+  padding-right: 8px;
+  font-size: 16px;
+  cursor: pointer;
+}
+.logout-cls {
+  float: right;
+  padding-top: 3px;
+  cursor: pointer;
+}
 @media only screen and (max-width: 600px) {
   .side-menu-visible.container {
     display: block;
@@ -56,8 +115,8 @@
   // min-width: 472px;
   width: calc(40% - var(--px20));
   height: calc(100%);
-
-  border-radius: var(--px20) 0 0;
+  border-radius: 0;
+  // border-radius: var(--px20) 0 0;
   ion-fab {
     position: absolute;
     right: var(--px30);
@@ -70,7 +129,6 @@
       --close-icon-font-size: var(--px30);
     }
   }
-
   .selected {
     --background: var(--colore2ffd0);
     // --background-activated-opacity: 0.04;
@@ -84,8 +142,10 @@
     padding: var(--px10);
     width: 100%;
     height: var(--px55);
-    border-radius: var(--px20) 0 0;
-    background-color: var(--ion-color-primary);
+    border-radius: 0;
+    // border-radius: var(--px20) 0 0;
+    background-color: #42454b;
+    color: #fefefe;
 
     .search-bar {
       font-family: "Roboto";
@@ -118,7 +178,8 @@
     ion-checkbox {
       --border-radius: var(--px2);
       --border-width: var(--px2);
-      --background: var(--ion-color-primary);
+      // --background: var(--ion-color-primary);
+      --background: #42454b;
       --border-color: var(--colorffffff);
       --checkmark-color: var(--ion-color-primary);
       --background-checked: var(--colorffffff);
@@ -209,7 +270,7 @@
 
       .checkbox-container {
         position: relative;
-        padding: var(--px10) var(--px15) var(--px8) var(--px10);
+        padding: var(--px10) var(--px15) var(--px8) 0;
       }
     }
     .case-info {
@@ -252,19 +313,21 @@
   // min-width: 700px;
   width: calc(60% - var(--px10));
   height: calc(100%);
-  border-radius: 0 var(--px20) 0 0;
+  border-radius: 0 0 0 0;
+  // border-radius: 0 var(--px20) 0 0;
   overflow-y: auto;
 
   .heading {
     width: 100%;
     height: var(--px55);
     box-shadow: 0 0 var(--px4) var(--px1) rgba(0, 0, 0, 0.16);
-    border-radius: 0 var(--px20) 0 0;
-    background-color: var(--colorffffff);
+    border-radius: 0;
+    background-color: #42454b;
 
     .title {
+      background-color: #42454b;
+      color: #fefefe;
       padding-left: var(--px20);
-      color: var(--color000000);
       font-family: "Roboto";
       font-size: var(--px18);
       font-weight: 500;
