Skill level type data set to firebase.

--- a/src/app/pages/ecg-cases/ecg-cases.page.html
+++ b/src/app/pages/ecg-cases/ecg-cases.page.html
@@ -199,7 +199,7 @@
         <div class="case-description">
           <p class="label-text">{{'skillLevel' | translate}}</p>
           <select class="single-select-cls" placeholder="Select" id="skillLevel" formControlName="skillLevel" name="skillLevel">
-            <!-- <option value="select" selected> select </option> -->
+            <option value="select" selected> select </option>
             <option value="Beginner"> Beginner </option>
             <option value="Intermediate"> Intermediate </option>
             <option value="Advance"> Advance </option>
