--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -3,8 +3,8 @@
   <div class="page-container">
     <!-- Logo -->
     <p class="logo">{{'appName' | translate}}</p>
-    <p class="greeting">{{'greeting' | translate}}</p>
-    <p class="message">{{'message' | translate}}</p>
+    <p class="welcome-greeting">{{'greeting' | translate}}</p>
+    <!-- <p class="message">{{'message' | translate}}</p> -->
 
     <form [formGroup]="loginForm" (keyup.enter)="login()" class="form">
 
