--- a/src/app/pages/ecg-cases/ecg-cases.page.scss
+++ b/src/app/pages/ecg-cases/ecg-cases.page.scss
@@ -216,6 +216,7 @@
     background-color: var(--colorececec);
     --background: var(--colorececec);
     --background-hover: var(--colorf8f8f8);
+    display: flex;
     p {
       // width: var(--px72);
       height: var(--px16);
@@ -698,6 +699,111 @@
     --background-hover-opacity: 1;
   }
 
+}
+
+body {font-family: Arial, Helvetica, sans-serif;}
+* {box-sizing: border-box;}
+.open-button {
+  background-color: #555;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  opacity: 0.8;
+  position: fixed;
+  bottom: 23px;
+  right: 28px;
+  width: 280px;
+}
+
+/* The popup form - hidden by default */
+.form-popup {
+  display: none;
+  position: fixed;
+  border: 3px solid #f1f1f1;
+  z-index: 9;
+  left: 28%;
+  top: 23%;
+  border-radius: 10px;
+}
+
+/* Add styles to the form container */
+.form-container {
+  max-width: 200px;
+  padding: 5px;
+  background-color: white;
+}
+
+.filter-block {
+  display: grid;
+}
+
+.arrow-cls {
+  background-color: #f7f2f2 !important;
+  transform: rotate(90deg);
+  height: 10px;
+  width: 10px;
+}
+
+.filter-label-cls {
+  font-size: 17px;
+  color: #000 !important;
+  background-color: #f7f2f2 !important;
+  font-family: "Open Sans";
+  margin: 0px;
+  padding: 6px;
+  border-radius: 0px !important;
+  margin-bottom: 1px;
+  cursor: pointer;
+}
+
+.filter-label-cls:hover {
+  color: #f7f2f2 !important;
+  background-color: #74b7b4 !important;
+  border-radius: 5px !important;
+  text-align: center;
+  font-size: 17px;
+  font-family: "Open Sans";
+  margin: 0px;
+  padding: 6px;
+  margin-bottom: 1px;
+  cursor: pointer;
+}
+
+.filter-label-cls-active {
+  color: #f7f2f2 !important;
+  background-color: #3ec5be !important;
+  border-radius: 5px !important;
+  text-align: center;
+  font-size: 17px;
+  font-family: "Open Sans";
+  margin: 0px;
+  padding: 6px;
+  margin-bottom: 1px;
+  cursor: pointer;
+}
+
+
+/* Set a style for the submit/login button */
+.form-container .btn {
+  background-color: #04AA6D;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+  opacity: 0.8;
+}
+
+/* Add a red background color to the cancel button */
+.form-container .cancel {
+  background-color: red;
+}
+
+/* Add some hover effects to buttons */
+.form-container .btn:hover, .open-button:hover {
+  opacity: 1;
 }
 
 
