--- a/src/app/pages/ecg-cases/ecg-cases.page.html
+++ b/src/app/pages/ecg-cases/ecg-cases.page.html
@@ -46,7 +46,7 @@
             <div class="filter-block">     
               <a class="filter-label-cls" id='Beginner' (click)="applyFilter('Beginner')" for="Beginner">Beginner</a>
               <a class="filter-label-cls" id='Intermediate' (click)="applyFilter('Intermediate')" for="Intermediate">Intermediate</a>
-              <a class="filter-label-cls" id='Advance' (click)="applyFilter('Advance')" for="Advance">Advance</a>
+              <a class="filter-label-cls" id='Advanced' (click)="applyFilter('Advanced')" for="Advanced">Advanced</a>
               <a class="filter-label-cls" id='Expert' (click)="applyFilter('Expert')" for="Expert">Expert</a>
             </div>
           </form>
@@ -59,19 +59,19 @@
       <div class="cases-box">
         <p>{{'cases'| translate}} {{activeCount}}</p>
         <p style="font-size: 12px;margin-left: 10px;">SkillLevel: </p>
-        <p style="font-size: 15px;margin-left: 5px;"> {{ skillLevelValue }}</p>
+        <p style="font-size: 15px;margin-left: 5px;"> {{ selectedCase?.skillLevel? selectedCase.skillLevel : skillLevelValue  }}</p>
       </div>
 
       <!-- case list -->
       <div class="cases-container">
-        <ion-reorder-group (ionItemReorder)="reorderItems($event)" disabled="false">
+        <ion-reorder-group (ionItemReorder)="reorderItems(skillLevelValue, $event)" disabled="false">
           <!-- Default reorder icon, end aligned items -->
           <ng-container *ngFor="let item of cases | searchFilter: searchText: currentPage: itemsPerPage ;let i= index;">
             <ion-item class="case" *ngIf="item.show" [attr.data-index]="i"
               [ngClass]="{'selected':selectedCase?.index -1  == i}" (click)="setSelectedCase(item,i)">
               <div class="case-container">
-                <img *ngIf="item.isPublish" src="../../../assets/img/publish.svg"/>
-                <div class="not-publish-cls" *ngIf="!item.isPublish" ></div>
+                <img *ngIf="!item.isPublish" src="../../../assets/img/publish.svg"/>
+                <div class="not-publish-cls" *ngIf="item.isPublish" ></div>
                 <div class="checkbox-container">
                   <ion-checkbox mode="ios" slot="start" (click)="itemCheckBox($event)" (ionChange)="checkifChecked()"
                     [(ngModel)]="item.isChecked" name="termsAndConditions">
@@ -91,8 +91,8 @@
         </ion-reorder-group>
         <p class="no-data" *ngIf="cases.length == 0 && !loading">{{'noData'| translate}}</p>
       </div>
-      <div class="pagination-container"
-        *ngIf="(cases.length >0) && (!searchText || searchText && searchText.length ==0)">
+      <div class="pagination-container">
+        <!-- *ngIf="(cases.length >0) && (!searchText || searchText && searchText.length ==0)" -->
         <div>
           <ion-button (click)="prev()">
             <ion-icon slot="icon-only"
@@ -117,6 +117,12 @@
         <p class="title">{{'case' | translate}} {{selectedCase?.index}}</p>
       </div>
 
+      <!-- Case Code -->
+      <div class="case-description dotted-border">
+        <p class="desc-heading">{{'CaseCode' | translate}}</p>
+        <p class="desc-details">{{selectedCase?.caseCode}}</p>
+      </div>
+
       <!-- Skill Level  -->   
       <div class="case-description dotted-border">
         <p class="desc-heading">{{'skillLevel' | translate}}</p>
@@ -134,8 +140,10 @@
         <p class="desc-heading">{{'ecgReport' | translate}}</p>
         <!-- Attachment buttons -->
         <div class="btn-container">
-          <!-- <ion-button *ngFor="let item of selectedCase?.attachments" class="attch-btn">{{item}}</ion-button> -->
-          <ion-img *ngIf="selectedCase?.imageUrl" (click)="openViewer(selectedCase)" class="attach-image"
+          <!-- <ion-button *ngIf="filename" (click)="openViewer(selectedCase, 'isAttachment')" class="attch-btn">
+            {{filename? filename : 'Attach ECG Report'}}.{{ext ? ext : ''}}
+          </ion-button> -->
+          <ion-img *ngIf="selectedCase?.imageUrl" (click)="openViewer(selectedCase, 'isAttachment')" class="attach-image"
             [src]="selectedCase?.imageUrl" alt="attachment">
           </ion-img>
         </div>
@@ -154,6 +162,22 @@
       <div class="case-description dotted-border">
         <p class="desc-heading">{{'nextStep' | translate}}</p>
         <p class="desc-details">{{selectedCase?.nextStep}}</p>
+      </div>
+
+
+      <!-- Answer image -->
+      <div class="case-description dotted-border">
+        <p class="desc-heading">{{'answerImage' | translate}}</p>
+        <!-- Attachment buttons -->
+        <div class="btn-container">
+          <ion-button class="attch-btn references-btn" *ngIf="rationaleFileName" (click)="openViewer(selectedCase, 'isRationaleAttachment')" >
+            <!-- {{rationaleFileName? rationaleFileName : 'Attach ECG Report'}}.{{rationaleExt ? rationaleExt : ''}} -->
+            Click to view
+          </ion-button>
+          <!-- <ion-img *ngIf="selectedCase?.imageUrl" (click)="openViewer(selectedCase)" class="attach-image"
+            [src]="selectedCase?.imageUrl" alt="attachment">
+          </ion-img> -->
+        </div>
       </div>
 
        <!-- References -->
@@ -205,16 +229,23 @@
           </div>
 
         </div>
+        <!-- Case Code  -->
+        <div class="case-description">
+          <p class="label-text">{{'CaseCode' | translate}}</p>
+          <input class="input-cls" placeholder="Enter case code" id="caseCode" formControlName="caseCode" name="caseCode" />
+          <div *ngIf="isSubmit && f.caseCode.errors" class="error-block">
+            <small *ngIf=" f.caseCode.errors.required">{{ 'caseDetailsRequired' | translate
+              }}</small>
+          </div>
+        </div>
+
         <!-- Skill Level  -->
         <div class="case-description">
           <p class="label-text">{{'skillLevel' | translate}}</p>
 
-          <select class="single-select-cls" placeholder="Select" id="skillLevel" formControlName="skillLevel" name="skillLevel" (change)="changeSkill($event)">
+          <select class="single-select-cls" placeholder="Select" id="skillLevel" formControlName="skillLevel" name="skillLevel" >
+            <!-- (change)="changeSkill($event)" -->
             <option *ngFor="let skill of skillLevelOption" value="{{ skill.value }}"> {{ skill.name }} </option>
-            <!-- <option value="Beginner"> Beginner </option>
-            <option value="Intermediate"> Intermediate </option>
-            <option value="Advance"> Advance </option>
-            <option value="Expert"> Expert </option> -->
           </select>
 
           <div *ngIf="isSubmit && f.skillLevel.errors" class="error-block">
@@ -244,11 +275,10 @@
           <p class="desc-heading">{{'ecgReport' | translate}}</p>
           <!-- Attachment buttons -->
           <div class="btn-container" [ngClass]="{'align-right':attachment}">
-            <ion-img *ngIf="attachment" class="attach-image" (click)="openViewer(attachment)"
+            <ion-img *ngIf="attachment" class="attach-image" (click)="openViewer(attachment, 'isAttachment')"
               [src]="attachment?.imagePreviewUrl" alt="attachment">
             </ion-img>
 
-            <!-- <ion-button *ngIf="attachment" class="attch-btn">{{attachment?.file?.imagePreviewUrl || attachment?.file}}</ion-button> -->
             <ion-button id="attachEcgReport" (click)="attachImage()" class="attch-btn">{{'attachEcgReport' | translate}}
             </ion-button>
 
@@ -285,22 +315,30 @@
               }}</small>
           </div>
         </div>
+
+        <div class="attachment">
+          <input id="selectRefrenceFile" #selectRefrenceFile style=" display: 'none' " type="file" (change)="handleSelectRefrenceFile($event)"
+            accept="image/*" />
+          <!-- Attachment buttons -->
+          <div class="btn-container" [ngClass]="{'align-right':rationaleAttachment}">
+            <ion-img *ngIf="rationaleAttachment" class="attach-image" (click)="openViewer(rationaleAttachment, 'isRationaleAttachment')"
+              [src]="rationaleAttachment?.imagePreviewUrl ? rationaleAttachment?.imagePreviewUrl : selectedCase.rationaleImageUrl" alt="rationaleAttachment">
+            </ion-img>
+            <ion-button id="attachRefrenceReport" (click)="attachReferencesImage()" class="attch-btn">{{'attachImage' | translate}}
+            </ion-button>
+          </div>
+          <div *ngIf="isSubmit && ! rationaleAttachment" class="error-block">
+            <small>{{ 'attachmentRequired' | translate
+              }}</small>
+          </div>
+        </div>
+
         <!-- References -->
         <div class="case-description">
-          <p class="label-text">{{'references2' | translate}}</p>
+          <p class="label-text">{{'referencesLink' | translate}}</p>
 
-          <editor formControlName="references" name="references" id="references" class="textarea no-border"
-            apiKey="sq6kvq4itc0hhndlq9a9a6y974zcdjxe51lhd7mpr2si72th"
-            [init]="{
-              plugins: 'link autolink',
-              toolbar:'', height : '100%',
-              link_default_protocol: 'https',
-              default_link_target: '_blank',
-              menubar:false,
-              statusbar: false,
-              base_url: '/tinymce',
-              suffix: '.min' }">
-          </editor>
+          <input formControlName="references" name="references" id="references" class="input-cls"/>
+          
           <div *ngIf="isSubmit && f.references.errors " class="error-block">
             <small *ngIf="f.references.errors.required">{{ 'referencesRequired' | translate
               }}</small>
@@ -310,19 +348,7 @@
         <!-- Supplement -->
         <div class="case-description">
           <p class="label-text">{{'supplement' | translate}}</p>
-
-          <editor formControlName="supplement" name="supplement" id="supplement" class="textarea no-border"
-            apiKey="sq6kvq4itc0hhndlq9a9a6y974zcdjxe51lhd7mpr2si72th"
-            [init]="{
-              plugins: 'link autolink',
-              toolbar:'', height : '100%',
-              link_default_protocol: 'https',
-              default_link_target: '_blank',
-              menubar:false,
-              statusbar: false,
-              base_url: '/tinymce',
-              suffix: '.min' }">
-          </editor>
+          <input formControlName="supplement" name="supplement" id="supplement" class="input-cls"/>
           <div *ngIf="isSubmit && f.supplement.errors " class="error-block">
             <small *ngIf="f.supplement.errors.required">{{ 'supplementRequired' | translate }}</small>
           </div>
@@ -330,10 +356,8 @@
 
          <!-------------- Keep me signed in --------------->
         <div class="checkbox-container">
-          <!-- <ion-checkbox class="checkbox-cls" mode="ios" slot="start" (click)="publishClick()" name="isPublish"
-          checked="{{isPublish}}"></ion-checkbox>{{isPublish}} -->
-          <input type="checkbox" class="checkbox-cls" mode="ios" slot="start" (click)="publishClick()" name="isPublish"
-          checked="{{f.isPublish.value}}">
+          <input type="checkbox" formControlName="isPublish" class="checkbox-cls" mode="ios" slot="start" (click)="publishClick()" name="isPublish"
+          checked="{{isPublish}}">
           <ion-label class="checkbox-label">{{ 'publishInTheApp' | translate }}</ion-label>
         </div>
 
