--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -45,8 +45,8 @@
 
       <!-------------- Keep me signed in --------------->
       <div class="checkbox-container">
-        <ion-checkbox mode="ios" slot="start" (click)="checkBox()" name="termsAndConditions"
-        checked="{{termsAndConditions}}" formControllName="termsAndConditions"></ion-checkbox>
+        <ion-checkbox mode="ios" slot="start" (click)="checkBox($event)" name="termsAndConditions"
+        checked="{{f.termsAndConditions.value}}" formControllName="termsAndConditions"></ion-checkbox>
         <ion-label class="checkbox-label">{{ 'rememberMe' | translate }}</ion-label>
       </div>
 
