--- a/src/global.scss
+++ b/src/global.scss
@@ -40,6 +40,7 @@
   }
 }
 
+
 @font-face {
   font-family: "Open Sans";
   font-style: normal;
@@ -639,7 +640,7 @@ p {
   ion-content {
     --background: transparent;
     .swiper-container{
-      overflow: auto !important;
+      overflow: scroll !important;
       list-style : unset !important;
     }
     // .swiper-wrapper{
@@ -650,19 +651,24 @@ p {
     display: none;
   }
 }
-*::-webkit-scrollbar {
-  -webkit-appearance: none;
-  width: 4px;
-  height: 4px;
+
+::-webkit-scrollbar {
+  display: none;
 }
-*::-webkit-scrollbar-thumb {
-  border-radius: 4px;
-  background-color: rgba(0, 0, 0, .5);
-  -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, .5);
-}
-*::-webkit-scrollbar-track {
-  // box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-}
-*::-webkit-scrollbar-corner{
-  background-color: transparent;
-}
+// *::-webkit-scrollbar {
+//   -webkit-appearance: none;
+//   width: 4px;
+//   height: 4px;
+// }
+// *::-webkit-scrollbar-thumb {
+//   border-radius: 4px;
+//   background-color: rgba(0, 0, 0, .5);
+//   -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, .5);
+// }
+// *::-webkit-scrollbar-track {
+//   // box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+// }
+// *::-webkit-scrollbar-corner{
+//   background-color: transparent;
+// }
+
