--- a/src/app/pages/ecg-cases/ecg-cases.page.html
+++ b/src/app/pages/ecg-cases/ecg-cases.page.html
@@ -57,9 +57,8 @@
 
       <!-- Total cases label -->
       <div class="cases-box">
-        <p>{{'cases'| translate}} {{activeCount}}</p>
-        <p style="font-size: 12px;margin-left: 10px;">SkillLevel: </p>
-        <p style="font-size: 15px;margin-left: 5px;"> {{ selectedCase?.skillLevel? selectedCase.skillLevel : skillLevelValue  }}</p>
+        <p style="width: 50%;">{{'cases'| translate}} {{activeCount}}</p>
+        <p style="width: 50%; text-align: right; margin-left: 10px;">Skill Level: {{ selectedCase?.skillLevel? selectedCase.skillLevel : skillLevelValue  }}</p>
       </div>
 
       <!-- case list -->
@@ -166,7 +165,7 @@
 
 
       <!-- Answer image -->
-      <div class="case-description dotted-border">
+      <div *ngIf="rationaleFileName" class="case-description dotted-border">
         <p class="desc-heading">{{'answerImage' | translate}}</p>
         <!-- Attachment buttons -->
         <div class="btn-container">
@@ -316,9 +315,10 @@
           </div>
         </div>
 
-        <div class="attachment">
+        <div *ngIf="rationaleAttachment" class="attachment">
           <input id="selectRefrenceFile" #selectRefrenceFile style=" display: 'none' " type="file" (change)="handleSelectRefrenceFile($event)"
             accept="image/*" />
+            <p class="desc-heading">{{'answerImage' | translate}}</p>
           <!-- Attachment buttons -->
           <div class="btn-container" [ngClass]="{'align-right':rationaleAttachment}">
             <ion-img *ngIf="rationaleAttachment" class="attach-image" (click)="openViewer(rationaleAttachment, 'isRationaleAttachment')"
@@ -326,10 +326,6 @@
             </ion-img>
             <ion-button id="attachRefrenceReport" (click)="attachReferencesImage()" class="attch-btn">{{'attachImage' | translate}}
             </ion-button>
-          </div>
-          <div *ngIf="isSubmit && ! rationaleAttachment" class="error-block">
-            <small>{{ 'attachmentRequired' | translate
-              }}</small>
           </div>
         </div>
 
