--- a/src/app/pages/ecg-cases/ecg-cases.page.scss
+++ b/src/app/pages/ecg-cases/ecg-cases.page.scss
@@ -763,8 +763,10 @@ body {font-family: Arial, Helvetica, sans-serif;}
   position: fixed;
   border: 3px solid #f1f1f1;
   z-index: 9;
-  left: 28%;
-  top: 23%;
+  // left: 32%;
+  // top: 19%;
+  left: 32%;
+  top: 120px;
   border-radius: 10px;
 }
 
