--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -93,6 +93,7 @@
   --colorf8f8f8: #f8f8f8;
   --colore2ffd0: #e2ffd0;
   --coloreae7e7: #eae7e7;
+  --colora5c3f9: #a5c3f9;
 
   /** Different font sizes **/
   /** 1rem = 10px **/
