--- a/src/app/pages/ecg-cases/ecg-cases.page.scss
+++ b/src/app/pages/ecg-cases/ecg-cases.page.scss
@@ -65,7 +65,7 @@ ion-header {
 }
 
 .single-select-cls {
-  width: 96%;
+  width: 100%;
   height: 30px;
   border-color: #e1e1e1;
   font-size: 12px;
@@ -139,7 +139,8 @@ ion-header {
     }
   }
   .selected {
-    --background: var(--colore2ffd0);
+    // --background: var(--colore2ffd0);
+    --background: #a5c4fd;
     // --background-activated-opacity: 0.04;
     // opacity : 0.5;
   }
@@ -244,7 +245,8 @@ ion-header {
   .case {
     --padding-start: 0px;
     --min-height: var(--px59);
-    --background-hover: var(--colore2ffd0);
+    // --background-hover: var(--colore2ffd0);
+    --background-hover: #99afe8;
     --background-hover-opacity:0.5;
 
     .reorder {
@@ -772,8 +774,8 @@ body {font-family: Arial, Helvetica, sans-serif;}
   z-index: 9;
   // left: 32%;
   // top: 19%;
-  left: 32%;
-  top: 120px;
+  left: 33%;
+  top: 131px;
   border-radius: 10px;
 }
 
@@ -861,6 +863,21 @@ body {font-family: Arial, Helvetica, sans-serif;}
   color: #210de4 !important;
   cursor: pointer;
   // text-decoration: underline;
+}
+
+
+.one-line-cls {
+  display: flex;
+}
+
+.one-line-label-cls {
+  width: 20% !important;;
+  margin-bottom: 0px;
+  margin-top: 8px;
+}
+
+.one-line-input-cls {
+  margin-right: 18px;
 }
 
 
